# LogiLinux

./: .gitignore  CMakeLists.txt  Makefile  README.md  creative_console_navigation  gif_player  gif_player.cpp  giffer  giffer.cpp  hid_monitor  lcd_display  lcd_display.cpp  navigation_grid  navigation_grid.cpp
examples/: CMakeLists.txt  dialpad-example.cpp  mx-keypad-debug.cpp  mx-keypad-example.cpp  volume-example.cpp
lib/: CMakeLists.txt  README.md  logilinux.pc.in
lib/include/logilinux/: device.h  events.h  logilinux.h  mx_keypad.h  version.h
lib/src/core/: device_manager.cpp  device_manager.h  input_monitor.cpp  input_monitor.h  library.cpp
lib/src/devices/: dialpad_device.cpp  dialpad_device.h  mx_keypad_device.cpp  mx_keypad_device.h
src/: CMakeLists.txt  dialpad-debug.cpp  dialpad-volume.cpp  find-dialpad-events.cpp  input-event-monitor.cpp
